--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
   font-family: 'lekonifont';
   src: url('/fonts/medium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
-
 
 @layer base {
   :root  {
@@ -64,6 +62,7 @@
   }
   body {
     @apply bg-background text-foreground box-border;
+    font-family: 'lekonifont', sans-serif;
   }
 }
 
@@ -160,4 +159,3 @@
 }
 
 
- 
